[package]
name = "kiaproxy"
version = "0.1.2"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "High performance and extremely light TCP load balancer proxy."
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/kiaproxy"
readme = "README.md"
categories = ["network-programming"]
keywords = ["tcp", "high-availability", "ha", "tls-passthrough", "proxy"]

[dependencies]
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "io-util", "time", "macros"] }
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v4"] }
