[package]
name = "kiaproxy"
version = "0.2.0"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "high performance and extremely light TCP load balancer proxy"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/kiaproxy"
readme = "README.md"
categories = ["network-programming"]
keywords = ["tcp", "high-availability", "ha", "tls-passthrough", "proxy"]

[dependencies]
tokio = { version = "1.52.3", features = ["net", "sync", "rt-multi-thread", "io-util", "time", "macros"] }
chrono = "0.4.45"
uuid = { version = "1.23.4", features = ["v4"] }
signal-hook= "0.4.4"
